<resources>
    <string name="app_name">Bonch Dev Messenger</string>
    <string name="sign_in">Войти</string>
    <string name="sign_up">Зарегистрироваться</string>
    <string name="hello_text">Mobile\nDevelopment</string>
    <string name="email_hint">Почта</string>
    <string name="password_hint">Пароль</string>
    <string name="registration_text">Регистрация</string>
    <string name="username_hint">Имя</string>
    <string name="confirm_password_hint">Подтвердите пароль</string>
    <string name="complete_sign_up_text">Зарегистрироваться</string>
    <string name="message_hint">Сообщение</string>
    <string name="confirm_email_text">Подтвердить почту</string>
    <string name="change_password_text">Поменять пароль</string>
    <string name="sign_out_text">Выйти</string>
    <string name="change_text">Поменять</string>
    <string name="old_password_text">Старый пароль</string>
    <string name="new_password_text">Новый пароль</string>
    <string name="confirm_password_text">Подтвердите пароль</string>
    <string name="menu_chat">Чат</string>
    <string name="menu_profile">Профиль</string>
</resources>
