<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:background="#1E5085"
    android:layout_gravity="center"
    android:padding="25dp">

    <EditText
        android:id="@+id/old_password_edit_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/old_password_text"
        android:layout_margin="5dp"
        android:ems="10"
        android:inputType="textPassword" />

    <EditText
        android:id="@+id/new_password_edit_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/new_password_text"
        android:layout_margin="5dp"
        android:ems="10"
        android:inputType="textPassword" />

    <EditText
        android:id="@+id/confirm_password_edit_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/confirm_password_text"
        android:layout_margin="5dp"
        android:inputType="textPassword" />

    <Button
        android:id="@+id/change_password_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/background_button"
        android:text="@string/change_text" />
</LinearLayout>